--- a/conctacto.html
+++ b/conctacto.html
@@ -1,47 +1,51 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cont.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="cont.css" />
     <title>Contacto</title>
-</head>
-<body>
-   <header>
-    <h1 class="logo">mi primera pagina</h1>
-    <nav>
-      <ul>
-        <li><a href="mi_primera_pagina.html">Inicio</a></li>
-        <li><a href="servicio.html">servicios</a></li>
-        <li><a href="conctacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+  </head>
+  <body>
+    <header>
+      <h1 class="logo">mi primera pagina</h1>
+      <nav role="navigation">
+        <ul>
+          <li><a href="mi_primera_pagina.html">Inicio</a></li>
+          <li><a href="servicio.html">servicios</a></li>
+          <li><a href="conctacto.html">Contacto</a></li>
+          <li><a href="about.html">Acerca De</a></li>
+        </ul>
+      </nav>
+    </header>
     <h1 class="conctacto">Contacto</h1>
-    <p class="informacion">¡Contáctanos para cualquier consulta o solicitud de información!</p>
+    <p class="informacion">
+      ¡Contáctanos para cualquier consulta o solicitud de información!
+    </p>
     <h3>Dejenos tus datos para ponernos en conctacto con tigo</h3>
-     <form id="miFormulario">
-    <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" name="nombre" required>
-    <br>
+    <form id="miFormulario">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required />
+      <br />
 
-    <label for="apellido">Apellido:</label>
-    <input type="text" id="apellido" name="apellido" required>
-    <br>
+      <label for="apellido">Apellido:</label>
+      <input type="text" id="apellido" name="apellido" required />
+      <br />
 
-    <label for="direccion">Dirección:</label>
-    <input type="text" id="direccion" name="direccion" required>
-    <br>
+      <label for="direccion">Dirección:</label>
+      <input type="text" id="direccion" name="direccion" required />
+      <br />
 
-    <label for="lugar">Lugar de Residencia:</label>
-    <input type="text" id="lugar" name="lugar" required>
-    <br>
+      <label for="lugar">Lugar de Residencia:</label>
+      <input type="text" id="lugar" name="lugar" required />
+      <br />
 
-    <label for="correo">Correo Electrónico:</label>
-    <input type="email" id="correo" name="correo" required>
-    <br>
+      <label for="correo">Correo Electrónico:</label>
+      <input type="email" id="correo" name="correo" required />
+      <br />
 
-    <input type="submit" value="Enviar">
+      <input type="submit" value="Enviar" />
+    </form>
     <script src="conctacto.js"></script>
   </body>
 </html>
