--- a/mi_primera_pagina.html
+++ b/mi_primera_pagina.html
@@ -10,24 +10,35 @@
   <body>
     <header>
       <h1>mi primera pagina</h1>
-      <nav>
+      <nav role="navigation">
         <ul>
           <li><a href="mi_primera_pagina.html">Inicio</a></li>
           <li><a href="servicio.html">servicios</a></li>
           <li><a href="conctacto.html">Contacto</a></li>
+          <li><a href="about.html">Acerca De</a></li>
         </ul>
       </nav>
     </header>
-    <h1 class="titulo">mi nombre Diego patiño</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima modi nisi
-      id quo sit mollitia error enim reiciendis? Maxime molestias ipsam
-      voluptatibus aut est autem nobis dicta tenetur minus quia!
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque deleniti
-      vitae nihil, nisi iure quos fugiat nemo molestiae obcaecati unde tempore
-      enim excepturi numquam, inventore ipsa fugit quasi magni? Tempore?
-    </p>
+    <h1 class="titulo">Bienvenidos a mi primera pagina</h1>
+    <div class="container">
+      <div class="item">
+        <h3>Mi nombre es Diego Patiño</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.<br />
+          Minima modi nisi id quo sit mollitia error enim reiciendis? Maxime
+          molestias ipsam voluptatibus aut est autem nobis dicta tenetur minus
+          quia!
+        </p>
+      </div>
+
+      <div class="item">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+          deleniti vitae nihil, nisi iure quos fugiat nemo molestiae obcaecati
+          unde tempore enim excepturi numquam, inventore ipsa fugit quasi magni?
+          Tempore?
+        </p>
+      </div>
+    </div>
   </body>
 </html>
