modificando mipagina agregue los botones y videos y mas archivos js

--- a/about.html
+++ b/about.html
@@ -40,5 +40,10 @@
         alt="Descripción de la imagen 3"
       />
     </div>
+    <button onClick="showAlert()" aria-label="Haz clic en mí">
+      ¡Haz clic en mí!
+    </button>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="about.js"></script>
   </body>
 </html>
