--- a/mi_primera_pagina.html
+++ b/mi_primera_pagina.html
@@ -19,26 +19,47 @@
         </ul>
       </nav>
     </header>
-    <h1 class="titulo">Bienvenidos a mi primera pagina</h1>
     <div class="container">
-      <div class="item">
-        <h3>Mi nombre es Diego Patiño</h3>
+      <h1 class="titulo">Bienvenidos a mi primer Website</h1>
+      <section>
+        <h2>Presentación</h2>
+        <p>Soy Diego Patiño, ¡y esta es mi primera página web!</p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.<br />
-          Minima modi nisi id quo sit mollitia error enim reiciendis? Maxime
-          molestias ipsam voluptatibus aut est autem nobis dicta tenetur minus
-          quia!
+          Estoy aprendiendo desarrollo web para crear sitios web visualmente
+          atrapantes y funcionales.
         </p>
-      </div>
-
-      <div class="item">
+      </section>
+      <section>
+        <h2>Lo que se viene...</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
-          deleniti vitae nihil, nisi iure quos fugiat nemo molestiae obcaecati
-          unde tempore enim excepturi numquam, inventore ipsa fugit quasi magni?
-          Tempore?
+          A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript.
+          Estos lenguajes me ayudarán a crear una base sólida en el desarrollo
+          web front-end.
         </p>
-      </div>
+      </section>
     </div>
+    <section>
+      <iframe
+        width="665"
+        height="315"
+        src="https://www.youtube.com/embed/qWcwFMAqpME"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; 
+      clipboard-write; encrypted-media; gyroscope;
+       picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+      <video
+        src="video/¡Bienvenid@s! Ponte a prueba y comienza a programar.mp4"
+        controls
+      ></video>
+    </section>
+    <button onClick="showAlert()" aria-label="Haz clic en mí">
+      ¡Haz clic en mí!
+    </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="mi_primera_pajina.js"></script>
   </body>
 </html>
