--- a/conctacto.html
+++ b/conctacto.html
@@ -46,6 +46,10 @@
 
       <input type="submit" value="Enviar" />
     </form>
+    <button onClick="showAlert()" aria-label="Haz clic en mí">
+      ¡Haz clic en mí!
+    </button>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="conctacto.js"></script>
   </body>
 </html>
