agregue el readme y carpetas para los archivos js y css

--- a/mi_primera_pagina.html
+++ b/mi_primera_pagina.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Mi primera pagina</title>
   </head>
   <body>
@@ -21,45 +21,47 @@
     </header>
     <div class="container">
       <h1 class="titulo">Bienvenidos a mi primer Website</h1>
-      <section>
+      <main>
         <h2>Presentación</h2>
         <p>Soy Diego Patiño, ¡y esta es mi primera página web!</p>
         <p>
           Estoy aprendiendo desarrollo web para crear sitios web visualmente
           atrapantes y funcionales.
         </p>
-      </section>
-      <section>
+
         <h2>Lo que se viene...</h2>
         <p>
           A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript.
           Estos lenguajes me ayudarán a crear una base sólida en el desarrollo
           web front-end.
         </p>
-      </section>
+      </main>
     </div>
-    <section>
-      <iframe
-        width="665"
-        height="315"
-        src="https://www.youtube.com/embed/qWcwFMAqpME"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; 
+    <footer>
+      <div>
+        <iframe
+          width="660"
+          height="315"
+          src="https://www.youtube.com/embed/qWcwFMAqpME"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; 
       clipboard-write; encrypted-media; gyroscope;
        picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
-      <video
-        src="video/¡Bienvenid@s! Ponte a prueba y comienza a programar.mp4"
-        controls
-      ></video>
-    </section>
-    <button onClick="showAlert()" aria-label="Haz clic en mí">
-      ¡Haz clic en mí!
-    </button>
-
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div>
+        <video
+          src="video/¡Bienvenid@s! Ponte a prueba y comienza a programar.mp4"
+          controls
+        ></video>
+      </div>
+      <button onClick="showAlert()" aria-label="Haz clic en mí">
+        ¡Haz clic en mí!
+      </button>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="mi_primera_pajina.js"></script>
+    <script src="js/mi_primera_pajina.js"></script>
   </body>
 </html>
