--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <title>Acerca De</title>
   </head>
   <body>
@@ -25,25 +25,16 @@
       nuestra empresa y los servicios que ofrecemos.
     </p>
     <div class="contenedor">
-      <img
-        src="img/pexels-jeremy-bishop-3464632.jpg"
-        alt="Descripción de la imagen 1"
-      />
+      <img src="img/egg1.jpg" alt="Descripción de la imagen 1" />
 
-      <img
-        src="img/pexels-luis-dalvan-1770809.jpg"
-        alt="Descripción de la imagen 2"
-      />
+      <img src="img/egg2.jpg" alt="Descripción de la imagen 2" />
 
-      <img
-        src="img/pexels-luis-del-río-15286.jpg"
-        alt="Descripción de la imagen 3"
-      />
+      <img src="img/1.jpg" alt="Descripción de la imagen 3" />
     </div>
     <button onClick="showAlert()" aria-label="Haz clic en mí">
       ¡Haz clic en mí!
     </button>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="about.js"></script>
+    <script src="js/about.js"></script>
   </body>
 </html>
