--- a/conctacto.html
+++ b/conctacto.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="cont.css" />
+    <link rel="stylesheet" href="css/cont.css" />
     <title>Contacto</title>
   </head>
   <body>
@@ -50,6 +50,6 @@
       ¡Haz clic en mí!
     </button>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="conctacto.js"></script>
+    <script src="js/conctacto.js"></script>
   </body>
 </html>
