--- a/servicio.html
+++ b/servicio.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="serv.css" />
+    <link rel="stylesheet" href="css/serv.css" />
     <title>Nuestros servicios</title>
     <link
       rel="stylesheet"
@@ -82,6 +82,6 @@
       ¡Haz clic en mí!
     </button>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="servicios.js"></script>
+    <script src="js/servicios.js"></script>
   </body>
 </html>
