arreglando el archivo de mi primera pagina y servicos y css

--- a/about.html
+++ b/about.html
@@ -31,9 +31,16 @@
 
       <img src="img/1.jpg" alt="Descripción de la imagen 3" />
     </div>
-    <button onClick="showAlert()" aria-label="Haz clic en mí">
-      ¡Haz clic en mí!
-    </button>
+    <footer>
+      <div class="footer-container">
+        <p>
+          Gracias por visitar mi primer Website. ¡Espero que te haya gustado!
+        </p>
+        <button onClick="showAlert()" aria-label="Haz clic en mí">
+          ¡Haz clic en mí!
+        </button>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="js/about.js"></script>
   </body>
