--- a/servicio.html
+++ b/servicio.html
@@ -26,61 +26,96 @@
     <section>
       <ul>
         <li>
-          <span onclick="mostrarDescripcion('descripcion1')"
-            ><i class="fas fa-info-circle fa-lg"></i
-          ></span>
-          servicio 1
-          <p id="descripcion1" class="descripcion">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
-            delectus laborum recusandae est explicabo, veritatis libero amet
-            tempora incidunt totam deleniti temporibus quaerat commodi! Suscipit
-            quidem minima reprehenderit at quod.
-          </p>
+          <div class="servicio">
+            <div class="titulo-icono">
+              <span onclick="mostrarDescripcion('descripcion1')"
+                ><i class="fas fa-info-circle fa-lg"></i
+              ></span>
+              <h3>servicio 1</h3>
+            </div>
+            <img src="img/img1.jpg" alt="Imagen de servicio 1" />
+            <div class="contenido">
+              <p id="descripcion1" class="descripcion">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+                delectus laborum recusandae est explicabo, veritatis libero amet
+                tempora incidunt totam deleniti temporibus quaerat commodi!
+                Suscipit quidem minima reprehenderit at quod.
+              </p>
+            </div>
+          </div>
         </li>
 
         <li>
-          <span onclick="mostrarDescripcion('descripcion2')"
-            ><i class="fas fa-info-circle fa-lg"></i
-          ></span>
-          servicio 2
-          <p id="descripcion2" class="descripcion">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
-            delectus laborum recusandae est explicabo, veritatis libero amet
-            tempora incidunt totam deleniti temporibus quaerat commodi! Suscipit
-            quidem minima reprehenderit at quod.
-          </p>
+          <div class="servicio">
+            <div class="titulo-icono">
+              <span onclick="mostrarDescripcion('descripcion2')"
+                ><i class="fas fa-info-circle fa-lg"></i
+              ></span>
+              <h3>servicio 2</h3>
+            </div>
+            <img src="img/img2.jpg" alt="Imagen de servicio 2" />
+            <div class="contenido">
+              <p id="descripcion2" class="descripcion">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+                delectus laborum recusandae est explicabo, veritatis libero amet
+                tempora incidunt totam deleniti temporibus quaerat commodi!
+                Suscipit quidem minima reprehenderit at quod.
+              </p>
+            </div>
+          </div>
         </li>
 
         <li>
-          <span onclick="mostrarDescripcion('descripcion3')"
-            ><i class="fas fa-info-circle fa-lg"></i
-          ></span>
-          servicio 3
-          <p id="descripcion3" class="descripcion">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
-            delectus laborum recusandae est explicabo, veritatis libero amet
-            tempora incidunt totam deleniti temporibus quaerat commodi! Suscipit
-            quidem minima reprehenderit at quod.
-          </p>
+          <div class="servicio">
+            <div class="titulo-icono">
+              <span onclick="mostrarDescripcion('descripcion3')"
+                ><i class="fas fa-info-circle fa-lg"></i
+              ></span>
+              <h3>servicio 3</h3>
+            </div>
+            <img src="img/img3.jpg" alt="Imagen de servicio 3" />
+            <div class="contenido">
+              <p id="descripcion3" class="descripcion">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+                delectus laborum recusandae est explicabo, veritatis libero amet
+                tempora incidunt totam deleniti temporibus quaerat commodi!
+                Suscipit quidem minima reprehenderit at quod.
+              </p>
+            </div>
+          </div>
         </li>
 
         <li>
-          <span onclick="mostrarDescripcion('descripcion4')"
-            ><i class="fas fa-info-circle fa-lg"></i
-          ></span>
-          servicio 4
-          <p id="descripcion4" class="descripcion">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
-            delectus laborum recusandae est explicabo, veritatis libero amet
-            tempora incidunt totam deleniti temporibus quaerat commodi! Suscipit
-            quidem minima reprehenderit at quod.
-          </p>
+          <div class="servicio">
+            <div class="titulo-icono">
+              <span onclick="mostrarDescripcion('descripcion4')"
+                ><i class="fas fa-info-circle fa-lg"></i
+              ></span>
+              <h3>servicio 1</h3>
+            </div>
+            <img src="img/img4.jpg" alt="Imagen de servicio 4" />
+            <div class="contenido">
+              <p id="descripcion4" class="descripcion">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero
+                delectus laborum recusandae est explicabo, veritatis libero amet
+                tempora incidunt totam deleniti temporibus quaerat commodi!
+                Suscipit quidem minima reprehenderit at quod.
+              </p>
+            </div>
+          </div>
         </li>
       </ul>
     </section>
-    <button onClick="showAlert()" aria-label="Haz clic en mí">
-      ¡Haz clic en mí!
-    </button>
+    <footer>
+      <div class="footer-container">
+        <p>
+          Gracias por visitar mi primer Website. ¡Espero que te haya gustado!
+        </p>
+        <button onClick="showAlert()" aria-label="Haz clic en mí">
+          ¡Haz clic en mí!
+        </button>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="js/servicios.js"></script>
   </body>
