--- a/conctacto.html
+++ b/conctacto.html
@@ -46,9 +46,16 @@
 
       <input type="submit" value="Enviar" />
     </form>
-    <button onClick="showAlert()" aria-label="Haz clic en mí">
-      ¡Haz clic en mí!
-    </button>
+    <footer>
+      <div class="footer-container">
+        <p>
+          Gracias por visitar mi primer Website. ¡Espero que te haya gustado!
+        </p>
+        <button onClick="showAlert()" aria-label="Haz clic en mí">
+          ¡Haz clic en mí!
+        </button>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="js/conctacto.js"></script>
   </body>
