--- a/mi_primera_pagina.html
+++ b/mi_primera_pagina.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1 class="titulo-header">mi primera pagina</h1>
+      <h1 class="titulo-header">Mi primera pagina</h1>
       <nav role="navigation">
         <ul>
           <li><a href="mi_primera_pagina.html">Inicio</a></li>
